--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": "",
   "author": "",
-  "license": "BSD",
+  "license": "MIT",
   "devDependencies": {
     "mocha": "~1.8.2"
   },
