--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "mocha": "~1.8.2",
-    "okay": "~0.2.0"
+    "okay": "~0.2.0",
+    "coffee-script": "~1.6.3"
   },
   "dependencies": {
     "sql": "~0.8.0"
