Make > relational@0.1.0 test /Users/bmc/src/node-relational > ./node_modules/.bin/coffee --output lib/ --compile src/ && ./node_modules/.bin/mocha
using postgres database gift_test

    Joiner loads hasMany: [2K[0G  ․ Joiner loads hasMany: 22ms
    Joiner loads another hasMany: [2K[0G  ․ Joiner loads another hasMany: 3ms
    Joiner loads belongsTo: [2K[0G  ․ Joiner loads belongsTo: 4ms
    Joiner loads two joins: [2K[0G  ․ Joiner loads two joins: 6ms
    Joiner loads nested: [2K[0G  ․ Joiner loads nested: 2ms
    Joiner loads double nested: [2K[0G  ․ Joiner loads double nested: 3ms
    Joiner loads has-many-through: [2K[0G  ․ Joiner loads has-many-through: 3ms
    Joiner loads has-one-through: [2K[0G  ․ Joiner loads has-one-through: 3ms
    Schema can add table: [2K[0G  ․ Schema can add table: 0ms
    Schema can add bulk: [2K[0G  ․ Schema can add bulk: 0ms
    Table has columns: [2K[0G  ․ Table has columns: 0ms
    Table calculates join: [2K[0G  ․ Table calculates join: 0ms
    Table calculates reverse join: [2K[0G  ․ Table calculates reverse join: 0ms

  13 passing (51ms) more robust

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/schema.js",
   "scripts": {
     "prepublish": "./node_modules/.bin/coffee --output lib/ --compile src/",
-    "test": "mocha"
+    "test": "./node_modules/.bin/coffee --output lib/ --compile src/ && ./node_modules/.bin/mocha"
   },
   "repository": "git://github.com/brianc/node-relational",
   "author": "",
